Update version and requirements

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = pytomosaic
-version = 0.1.10
+version = 0.1.11
 author = Luca Noble
 author_email = luca@nofa.uk
 description = An Open Source Python library for creating photomosaics
@@ -19,3 +19,5 @@ install_requires =
     tqdm
 	numpy
 	Pillow
+    requests
+    os
