--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = pytomosaic
-version = 0.1.12
+version = 0.1.12.post1
 author = Luca Noble
 author_email = luca@nofa.uk
 description = An Open Source Python library for creating photomosaics
